--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         <!--<a href="#portfolio" class="nav-item nav-link">Projects</a> -->
                         <a href="#education" class="nav-item nav-link">Education</a>
                         <!--<a href="#contact" class="nav-item nav-link">Contact</a> -->
+                        <a href="#project" class="nav-item nav-link">Projects</a>
                     </div>
                 </div>
             </div>
