--- a/index.html
+++ b/index.html
@@ -291,9 +291,12 @@
                                     <p>
                                         ● Managed AWS services (EC2, S3, RDS), improving system reliability and reducing downtime by 15%. <br>
                                         ● Automated routine tasks with Shell scripting, enhancing operational efficiency by 20%. <br>
-                                        ● Utilized Terraform for Infrastructure as Code (IaC) to ensure scalable cloud deployments. <br>
+                                        ● Utilized Terraform for Infrastructure as Code (IaC) and Ansible to ensure scalable cloud deployments. <br>
                                         ● Performed Linux server maintenance, ensuring 95% uptime. <br>
-                                        ● Integrated CI/CD pipelines using Jenkins, Docker, and Kubernetes for seamless DevOps workflows.
+                                        ● Integrated CI/CD pipelines using Jenkins, Docker, and Kubernetes for seamless DevOps workflows.<br>
+                                        ● Utilized Dynatrace and CloudWatch for proactive monitoring and incident response, enhancing system responsiveness by 25%.<br>
+                                        ● Maintained up-to-date job control language (JCL) for scheduled production runs and contributed to job scheduling and report distribution.
+                                               
                                     </p>
                                 </div>
                             </div>
