--- a/index.html
+++ b/index.html
@@ -289,13 +289,13 @@
                                     <h2>Assistant Systems Engineer</h2>
                                     <h4>Tata Consultancy Services, India</h4>
                                     <p>
-                                        ● Managed AWS services (EC2, S3, RDS), improving system reliability and reducing downtime by 15%. <br>
-                                        ● Automated routine tasks with Shell scripting, enhancing operational efficiency by 20%. <br>
-                                        ● Utilized Terraform for Infrastructure as Code (IaC) and Ansible to ensure scalable cloud deployments. <br>
-                                        ● Performed Linux server maintenance, ensuring 95% uptime. <br>
-                                        ● Integrated CI/CD pipelines using Jenkins, Docker, and Kubernetes for seamless DevOps workflows.<br>
-                                        ● Utilized Dynatrace and CloudWatch for proactive monitoring and incident response, enhancing system responsiveness by 25%.<br>
-                                        ● Maintained up-to-date job control language (JCL) for scheduled production runs and contributed to job scheduling and report distribution.
+                                        ● Managed <strong>AWS services (EC2, S3, RDS)</strong> improving system reliability and reducing downtime by 15%. <br>
+                                        ● Automated routine tasks with <strong>Shell scripting</strong>, enhancing operational efficiency by 20%. <br>
+                                        ● Utilized <b>Terraform</b> for Infrastructure as Code (IaC) and <b>Ansible</b> to ensure scalable cloud deployments. <br>
+                                        ● Performed <b>Linux server maintenance</b>, ensuring 95% uptime. <br>
+                                        ● Integrated CI/CD pipelines using <b>Jenkins</b>, <b>Docker</b>, and <b>Kubernetes</b> for seamless DevOps workflows.<br>
+                                        ● Utilized <b>Dynatrace</b> and <b>CloudWatch</b> for proactive monitoring and incident response, enhancing system responsiveness by 25%.<br>
+                                        ● Maintained up-to-date <b>job control language (JCL)</b> for scheduled production runs and contributed to job scheduling and report distribution.
                                                
                                     </p>
                                 </div>
